# sv2-apps

./: .gitignore  README.md
.github/workflows/: binary-release.yaml  ci.yaml  coverage.yaml  integration-tests.yaml  lockfiles.yaml  msrv.yaml  semver-check.yaml
bitcoin-core-sv2/: Cargo.toml  README.md
bitcoin-core-sv2/examples/: logger.rs
bitcoin-core-sv2/src/: error.rs  handlers.rs  lib.rs  monitors.rs  template_data.rs
integration-tests/lib/: mod.rs
miner-apps/: Cargo.toml
miner-apps/jd-client/: Cargo.toml  README.md
miner-apps/jd-client/config-examples/: jdc-config-bitcoin-core-ipc-hosted-infra-example.toml  jdc-config-bitcoin-core-ipc-local-infra-example.toml  jdc-config-hosted-infra-example.toml  jdc-config-local-infra-example.toml
miner-apps/jd-client/src/lib/: config.rs  error.rs  mod.rs
miner-apps/jd-client/src/lib/template_receiver/: mod.rs
miner-apps/jd-client/src/lib/template_receiver/sv2_tp/: message_handler.rs  mod.rs
miner-apps/mining-device/: Cargo.toml
pool-apps/jd-server/: Cargo.toml
pool-apps/pool/: Cargo.toml  README.md
pool-apps/pool/config-examples/: pool-config-bitcoin-core-ipc-example.toml  pool-config-hosted-sv2-tp-example.toml  pool-config-local-sv2-tp-example.toml
pool-apps/pool/src/lib/: config.rs  error.rs  mod.rs
pool-apps/pool/src/lib/template_receiver/: bitcoin_core.rs
pool-apps/pool/src/lib/template_receiver/sv2_tp/: common_message_handler.rs  mod.rs
scripts/: coverage.sh  publish.sh
stratum-apps/src/: lib.rs  tp_type.rs
stratum-apps/src/network_helpers/: mod.rs
