[package]
name = "bitcoin_core_sv2"
description = "A library to get Stratum V2 Template Distribution Protocol from Bitcoin Core over IPC"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["The Stratum V2 Developers"]
homepage = "https://stratumprotocol.org"
readme = "README.md"
keywords = ["stratum", "mining", "bitcoin", "bitcoin-core"]

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
capnp = "0.21.4"
capnp-rpc = "0.21.0"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec", "compat"] }
async-channel = "1.5.1"

# todo: point to crates.io
stratum-core = { git = "https://github.com/stratum-mining/stratum", branch = "main" }

# todo: point to crates.io (whenever it's available there)
bitcoin-capnp-types = { git = "https://github.com/2140-dev/bitcoin-capnp-types", rev="2ccda4c10554a204188d563eab707a8d07334b52" }